--- a/public/index.html
+++ b/public/index.html
@@ -1,48 +1,110 @@
 <!DOCTYPE>
 <html ng-app="myApp">
+
 <head>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
-
-  <title>Contact List App</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+    <title>Maiduo admin</title>
 </head>
+
 <body>
-  <div class="container" ng-controller="AppCtrl">
-    <h1>Contact List App</h1>
+    <div class="container" ng-controller="AppCtrl">
+        <h1>Maiduo Admin Panel</h1>
+        <h2>Shops</h2>
+        <button class="btn btn-warning" data-toggle="modal" data-target="#newShopPanel">Add Shop</button>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Shop</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="shop in shopList">
+                    <td>{{shop.name}}</td>
+                    <td>
+                        <button class="btn btn-warning" data-toggle="modal" data-target="#newGroupbuyPanel">Add Group buy</button>
+                        <button class="btn btn-danger" ng-click="removeShop(shop._id)">Remove</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <h2>Groupbuys</h2>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Shop</th>
+                    <th>Groupbuy</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="gb in groupbuyList">
+                    <td></td>
+                    <td>{{gb.title}}</td>
 
-    <table class="table">
-      <thead>
-        <tr>
-          <th>Name</th>         
-          <th>Email</th>
-          <th>Number</th>
-          <th>Action</th>
-          <th>&nbsp;</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td><input class="form-control" ng-model="contact.name"></td>
-          <td><input class="form-control" ng-model="contact.email"></td>
-          <td><input class="form-control" ng-model="contact.number"></td>
-          <td><button class="btn btn-primary" ng-click="addContact()">Add Contact</button></td>
-          <td><button class="btn btn-info" ng-click="update()">Update</button>&nbsp;&nbsp;<button class="btn btn-info" ng-click="deselect()">Clear</button></td>
-        </tr>
-        <tr ng-repeat="contact in contactlist">
-          <td>{{contact.name}}</td>
-          <td>{{contact.email}}</td>
-          <td>{{contact.number}}</td>
-          <td><button class="btn btn-danger" ng-click="remove(contact._id)">Remove</button></td>
-          <td><button class="btn btn-warning" ng-click="edit(contact._id)">Edit</button></td>
-        </tr>
-      </tbody>
-    </table>
-
-  </div>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
-<script src="controllers/controller.js"></script>
+                    <td>
+                        <button class="btn btn-danger" ng-click="removeGroupbuy(gb._id)">Remove</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <!-- Modal -->
+        <div class="modal fade" id="newGroupbuyPanel" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">New Group Buy</h4>
+                    </div>
+                    <div class="modal-body">
+                        Title
+                        <input class="form-control" ng-model="groupbuy.title"> 
+                        Description
+                        <input class="form-control" ng-model="groupbuy.description"> Photo link
+                        <input class="form-control" ng-model="groupbuy.photoLink"> item name
+                        <input class="form-control" ng-model="groupbuy.itemName"> price
+                        <input class="form-control" ng-model="groupbuy.itemPrice">
+                        <button class="btn btn-primary" ng-click="addGroupbuy(shop._id)">Save</button>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="newShopPanel" role="dialog">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">New Shop</h4>
+                    </div>
+                    <div class="modal-body">
+                        Shop name
+                        <input class="form-control" ng-model="shop.name"> 
+                        email
+                        <input class="form-control" ng-model="shop.email"> 
+                        phone
+                        <input class="form-control" ng-model="shop.phone_number"> address
+                        <input class="form-control" ng-model="shop.address">
+                        <button class="btn btn-primary" ng-click="addShop()">Add Shop</button>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.12/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="controllers/controller.js"></script>
 </body>
+
 </html>
