--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
                 <tr ng-repeat="shop in shopList">
                     <td>{{shop.name}}</td>
                     <td>
-                        <button class="btn btn-danger" ng-click="editShop(shop)">Edit</button>
+                        <button class="btn btn-info" ng-click="editShop(shop)">Edit</button>
+                        <button class="btn btn-info" ng-click="newGroupbuy(shop)">Add Group buy</button>
                         <button class="btn btn-danger" ng-click="removeShop(shop._id)">Remove</button>
-                        <button class="btn btn-warning" ng-click="newGroupbuy(shop)">Add Group buy</button>
                     </td>
                 </tr>
             </tbody>
@@ -47,6 +47,8 @@
                     <td>{{gb.title}}</td>
 
                     <td>
+                        <button class="btn btn-info" ng-click="editGroupbuy(gb)">Edit</button>
+                        <a href="#" class="btn btn-info" role="button">Orders</a>
                         <button class="btn btn-danger" ng-click="removeGroupbuy(gb._id)">Remove</button>
                     </td>
                 </tr>
@@ -56,7 +58,12 @@
         <div ng-controller="AppCtrl">
             <script type="text/ng-template" id="newGroupBuy.html">
                 <div class="modal-header">
-                    <h3 class="modal-title">New Groupbuy</h3>
+                    <div ng-if="editMode == true">
+                        <h3 class="modal-title">Edit Gropbuy</h3>
+                    </div>
+                    <div ng-if="editMode != true">
+                        <h3 class="modal-title">New Gropbuy</h3>
+                    </div>
                 </div>
                 <div class="modal-body">
                     Title
@@ -104,32 +111,6 @@
                     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
                 </div>
             </script>
-        </div>
-        
-        
-        <div class="modal fade" id="newShopPanel" role="dialog">
-            <div class="modal-dialog">
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">New Shop</h4>
-                    </div>
-                    <div class="modal-body">
-                        Shop name
-                        <input class="form-control" ng-model="shop.name"> 
-                        email
-                        <input class="form-control" ng-model="shop.email"> 
-                        phone
-                        <input class="form-control" ng-model="shop.phone_number"> address
-                        <input class="form-control" ng-model="shop.address">
-                        <button class="btn btn-primary" ng-click="addShop()">Add Shop</button>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
     <script src="bower_components/angular/angular.min.js"></script>
