--- a/public/index.html
+++ b/public/index.html
@@ -72,13 +72,19 @@
                     <input class="form-control" ng-model="groupbuy.description">
                     Photo link
                     <input class="form-control" ng-model="groupbuy.photoLink">
-                    item name
-                    <input class="form-control" ng-model="groupbuy.itemName">
-                    price
-                    <input class="form-control" ng-model="groupbuy.itemPrice">
-
+                    <div data-ng-repeat="item in groupbuy.items">
+                        item name
+                        <input class="form-control" ng-model="item.item_name">
+                        price
+                        <input class="form-control" ng-model="item.item_price">
+                        stock count
+                        <input class="form-control" ng-model="item.stock_count">
+                        <button ng-click="removeItem($index)" class="btn btn-danger">Delete Item</button>
+                    </div>
+                     
                 </div>
                 <div class="modal-footer">
+                    <button class="btn btn-primary" type="button" ng-click="addItem()">Add Item</button>  
                     <button class="btn btn-primary" type="button" ng-click="ok()">SAVE</button>
                     <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
                 </div>
