--- a/public/index.html
+++ b/public/index.html
@@ -72,13 +72,13 @@
                     <input class="form-control" ng-model="groupbuy.description">
                     Photo link
                     <input class="form-control" ng-model="groupbuy.photoLink">
-                    <div data-ng-repeat="item in groupbuy.items">
+                    <div data-ng-repeat="item in items">
                         item name
-                        <input class="form-control" ng-model="item.item_name">
+                        <input class="form-control" ng-model="items[$index].item_name">
                         price
-                        <input class="form-control" ng-model="item.item_price">
+                        <input class="form-control" ng-model="items[$index].item_price">
                         stock count
-                        <input class="form-control" ng-model="item.stock_count">
+                        <input class="form-control" ng-model="items[$index].stock_count">
                         <button ng-click="removeItem($index)" class="btn btn-danger">Delete Item</button>
                     </div>
                      
