fixed edit groupbuy items

--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                         <h3 class="modal-title">Edit Gropbuy</h3>
                     </div>
                     <div ng-if="editMode != true">
-                        <h3 class="modal-title">New Gropbuy</h3>
+                        <h3 class="modal-title">New Groupbuy</h3>
                     </div>
                 </div>
                 <div class="modal-body">
