--- a/public/order.html
+++ b/public/order.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
-<html ng-app="myApp">
+<html>
 
 <head>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
-    <title>Maiduo</title>
+    <title>Order</title>
 </head>
 
 <body>
-    <div class="container" ng-controller="orderCtrl">
-        <h2>Groupbuy: {{groupbuyId}}</h2>
-    </div>
+    <div class="container-fluid">
+	    <div ng-app="myApp">
+			<div ng-view>
+			</div>
+		</div>
+	</div>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
