--- a/public/order_view.html
+++ b/public/order_view.html
@@ -2,7 +2,8 @@
 
 <h1>{{groupbuy.title}}</h1>
 <img src="{{groupbuy.photoLink}}"></img>
-<h1>{{groupbuy.description}}</h1>
+<br>
+{{groupbuy.description}}
 <br>
 Name
 <input class="form-control" ng-model="order.name"> 
