--- a/public/order_view.html
+++ b/public/order_view.html
@@ -13,8 +13,8 @@ Phone
 <input class="form-control" ng-model="order.phone_number">
 
 <div data-ng-repeat="item in groupbuy.items">
-    {{item.item_name}} : {{item.item_price}}
-    Order: <input class="form-control" ng-model="orderItem[$index].count">
+    {{item.item_name}} price: {{item.item_price}}<br>
+    Order: <input class="form-control" ng-model="orderItem[$index].item_count">
 </div>
-
-<button class="btn btn-primary" type="button" ng-click="submit()">Submit</button>
+<br>
+<button class="btn btn-primary" type="button" ng-click="submit_order()">Submit</button>
