--- a/public/order_view.html
+++ b/public/order_view.html
@@ -5,16 +5,20 @@
 <br>
 {{groupbuy.description}}
 <br>
-Name
+<br>
+微信名字
 <input class="form-control" ng-model="order.name"> 
 E-mail
 <input class="form-control" ng-model="order.email"> 
-Phone
+电话
 <input class="form-control" ng-model="order.phone_number">
 
 <div data-ng-repeat="item in groupbuy.items">
     {{item.item_name}} price: {{item.item_price}}<br>
-    Order: <input class="form-control" ng-model="orderItem[$index].item_count">
+    预定多少: <input class="form-control" ng-model="orderItem[$index].item_count">
 </div>
+备注
+<input class="form-control" ng-model="order.notes">
 <br>
 <button class="btn btn-primary" type="button" ng-click="submit_order()">Submit</button>
+    
