--- a/public/order_view.html
+++ b/public/order_view.html
@@ -1,24 +1,31 @@
+<head>
 
-
+    <title>{{groupbuy.title}}</title>
+</head>
+<body>
 <h1>{{groupbuy.title}}</h1>
 <img src="{{groupbuy.photoLink}}"></img>
 <br>
-{{groupbuy.description}}
+<h2>{{groupbuy.description}}</h2>
 <br>
 <br>
+<h3>
 微信名字
 <input class="form-control" ng-model="order.name"> 
 E-mail
 <input class="form-control" ng-model="order.email"> 
-电话
+电话(xxx-xxx-xxxx)
 <input class="form-control" ng-model="order.phone_number">
 
 <div data-ng-repeat="item in groupbuy.items">
     {{item.item_name}} price: {{item.item_price}}<br>
-    预定多少: <input class="form-control" ng-model="orderItem[$index].item_count">
+    订购数量: <input class="form-control" ng-model="orderItem[$index].item_count">
 </div>
 备注
 <input class="form-control" ng-model="order.notes">
 <br>
-<button class="btn btn-primary" type="button" ng-click="submit_order()">Submit</button>
-    
+</h3>
+<button class="btn btn-primary btn-lg" type="button" ng-click="submit_order()">提交订单</button>
+<br>
+<br>
+</body>
