add order confirmation page

--- a/public/order_success.html
+++ b/public/order_success.html
@@ -3,7 +3,8 @@
 </head>
 <body>
 
-    <h1>订购成功<h1><br>
+    <h1>订购成功</h1><br>
+<h2>
     微信名: {{order.name}}<br>
     Email:{{order.email}}<br>
     Phone: {{order.phone_number}}<br><br>
@@ -14,5 +15,7 @@
     </div>
     <br>
     谢谢会顾
-
+</h2>
+<br>
+<br>
 </body>
