add groupbuy backend page

--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 
                     <td>
                         <button class="btn btn-info" ng-click="editGroupbuy(gb)">Edit</button>
-                        <a href="#" class="btn btn-info" role="button">Orders</a>
+                        <button class="btn btn-info" ng-click="gotoGroupbuyOrders(gb._id)">Orders</button>
                         <button class="btn btn-danger" ng-click="removeGroupbuy(gb._id)">Remove</button>
                     </td>
                 </tr>
