--- a/public/order_view.html
+++ b/public/order_view.html
@@ -1,31 +1,42 @@
 <head>
-
+<div ng-if="groupbuyON == true">
     <title>{{groupbuy.title}}</title>
+</div>
+<div ng-if="groupbuyON == false">
+    <title>{{groupbuy.title}} 已截止</title>
+</div>
 </head>
 <body>
-<h1>{{groupbuy.title}}</h1>
+<div ng-if="groupbuyON == true">
+    <h1>{{groupbuy.title}}</h1>
+</div> 
+<div ng-if="groupbuyON == false">
+    <h1>{{groupbuy.title}} 已截止</h1>
+</div> 
 <img src="{{groupbuy.photoLink}}"></img>
 <br>
 <h2>{{groupbuy.description}}</h2>
 <br>
 <br>
-<h3>
-微信名字
-<input class="form-control" ng-model="order.name"> 
-E-mail
-<input class="form-control" ng-model="order.email"> 
-电话(xxx-xxx-xxxx)
-<input class="form-control" ng-model="order.phone_number">
-
-<div data-ng-repeat="item in groupbuy.items">
-    {{item.item_name}} price: {{item.item_price}}<br>
-    订购数量: <input class="form-control" ng-model="orderItem[$index].item_count">
-</div>
-备注
-<input class="form-control" ng-model="order.notes">
-<br>
-</h3>
-<button class="btn btn-primary btn-lg" type="button" ng-click="submit_order()">提交订单</button>
-<br>
-<br>
+<div ng-show="groupbuyON">
+    <h3>
+    微信名字
+    <input class="form-control" ng-model="order.name"> 
+    E-mail
+    <input class="form-control" ng-model="order.email"> 
+    电话(xxx-xxx-xxxx)
+    <input class="form-control" ng-model="order.phone_number">
+    
+    <div data-ng-repeat="item in groupbuy.items">
+        {{item.item_name}} price: {{item.item_price}}<br>
+        订购数量: <input class="form-control" ng-model="orderItem[$index].item_count">
+    </div>
+    备注
+    <input class="form-control" ng-model="order.notes">
+    <br>
+    </h3>
+    <button class="btn btn-primary btn-lg" type="button" ng-click="submit_order()">提交订单</button>
+    <br>
+    <br>
+</div>    
 </body>
