--- a/public/group_detail.html
+++ b/public/group_detail.html
@@ -1,16 +1,21 @@
 <h1>{{groupbuy.title}}后台</h1>
 <br>
 
-<h1>Orders</h1>
 <button class="btn btn-info" ng-click="refresh()">Refresh</button>
 <button class="btn btn-danger" ng-click="addOrder()">Add Order</button>
+<toggle-switch class="switch-success" ng-model="switchStatus" ng-click="toggle()"></toggle-switch>
 <br>
-
-
+<h1>Orders</h1>
+<div class="col-sm-3 col-md-3 input-group">
+    <input type="text" class="form-control" placeholder="Search phone..." ng-model="searchPhone">
+    <div class="input-group-btn">
+    	<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+    </div>
+</div>
 <table class="table table-striped table-responsive">
 <thead>
     <tr>
-    <th>date</th>
+    <th>订单时间</th>
     <th>微信名</th>
     <th>Email</th>
     <th>电话</th>
@@ -21,7 +26,7 @@
     </tr>
 </thead>
 <tbody>
-    <tr ng-repeat="order in orders">
+    <tr ng-repeat="order in orders | filter:searchPhone">
         <td>{{order.timestamp | date:'yyyy-MM-dd HH:mm'}}</td>
         <td>{{order.name}}</td>
         <td>{{order.email}}</td>
@@ -31,7 +36,7 @@
         <td>{{order.notes}}</td>
         <td>
             <button class="btn btn-info" ng-click="editOrder(order)">Edit</button>
-            <button class="btn btn-info" ng-click="pickupOrder(order._id)" ng-disabled="order.pickup">Pick up</button>
+            <button class="btn btn-info" ng-click="pickupOrder(order._id)" ng-disabled="order.pickedup">Pickup</button>
             <button class="btn btn-danger" ng-click="removeOrder(order._id)">Remove</button>
         </td>
     </tr>
