--- a/public/order_view.html
+++ b/public/order_view.html
@@ -28,8 +28,10 @@
     <input class="form-control" ng-model="order.phone_number">
     
     <div data-ng-repeat="item in groupbuy.items">
-        {{item.item_name}} price: {{item.item_price}}<br>
-        订购数量: <input class="form-control" ng-model="orderItem[$index].item_count">
+        {{item.item_name}} 价格: {{item.item_price}}<br>
+        <input class="form-control" ng-model="orderItem[$index].item_count" placeholder="订购数量">
+        <slider ng-model="sliders.sliderValue" min="testOptions.min" step="testOptions.step" max="testOptions.max" value="testOptions.value"></slider>
+        {{testOptions.value}}
     </div>
     备注
     <input class="form-control" ng-model="order.notes">
