--- a/public/order_view.html
+++ b/public/order_view.html
@@ -1,10 +1,10 @@
 <head>
-<div ng-if="groupbuyON == true">
-    <title>{{groupbuy.title}}</title>
-</div>
-<div ng-if="groupbuyON == false">
-    <title>{{groupbuy.title}} 已截止</title>
-</div>
+    <div ng-if="groupbuyON == true">
+        <title>{{groupbuy.title}}</title>
+    </div>
+    <div ng-if="groupbuyON == false">
+        <title>{{groupbuy.title}} 已截止</title>
+    </div>
 </head>
 <body>
 <div ng-if="groupbuyON == true">
@@ -13,30 +13,35 @@
 <div ng-if="groupbuyON == false">
     <h1>{{groupbuy.title}} 已截止</h1>
 </div> 
-<img src="{{groupbuy.photoLink}}"></img>
-<br>
-<h2>{{groupbuy.description}}</h2>
-<br>
-<br>
-<div ng-show="groupbuyON">
-    <h3>
-    微信名字
-    <input class="form-control" ng-model="order.name"> 
-    E-mail
-    <input class="form-control" ng-model="order.email"> 
-    电话(xxx-xxx-xxxx)
-    <input class="form-control" ng-model="order.phone_number">
-    
-    <div data-ng-repeat="item in groupbuy.items">
-        {{item.item_name}} 价格: {{item.item_price}}<br>
-        <input class="form-control" ng-model="orderItem[$index].item_count" placeholder="订购数量" value = 0>
-    </div>
-    备注
-    <input class="form-control" ng-model="order.notes">
+<div class="row">
+<div class="col-xs-12 col-sm-12 col-lg-8">
+    <img src="{{groupbuy.photoLink}}"></img>
     <br>
-    </h3>
-    <button class="btn btn-primary btn-lg" type="button" ng-click="submit_order()">提交订单</button>
-    <br>
-    <br>
-</div>    
+    <h2>
+        {{groupbuy.description}}
+        <br>
+        <br>
+        <div ng-show="groupbuyON">
+            微信名字<br>
+            <input class="form-contrl" type="text" ng-model="order.name"><br><br>
+            E-mail<br>
+            <input class="form-contrl" type="text" ng-model="order.email"> <br><br>
+            电话<br>
+            <input class="form-contrl" type="text" ng-model="order.phone_number"><br><br>
+            
+            <div data-ng-repeat="item in groupbuy.items">
+                {{item.item_name}} 价格: {{item.item_price}}<br>
+                <input class="form-contrl" type="text" ng-model="orderItem[$index].item_count" placeholder="订购数量"><br><br>
+            </div>
+
+            备注<br>
+            <input class="form-contrl" type="text" ng-model="order.notes">
+            <br><br>
+        <button class="btn btn-primary btn-lg" type="button" ng-click="submit_order()">提交订单</button>
+        <br>
+        <br>
+        </div>
+    </h2>
+</div>
+</div>
 </body>
