--- a/public/group_detail.html
+++ b/public/group_detail.html
@@ -26,7 +26,7 @@
     </tr>
 </thead>
 <tbody>
-    <tr ng-repeat="order in orders | filter:{phone_number:searchPhone}" ng-class="highlightRow(order)">
+    <tr ng-repeat="order in orders |orderBy:timestamp |filter:{phone_number:searchPhone}" ng-class="highlightRow(order)">
         <td>{{order.timestamp | date:'yyyy-MM-dd HH:mm'}}</td>
         <td>{{order.name}}</td>
         <td>{{order.email}}</td>
@@ -67,7 +67,7 @@
             
             <div data-ng-repeat="item in groupbuy.items">
                 {{item.item_name}} price: {{item.item_price}}<br>
-                订购数量: <input class="form-control" ng-model="orderItem[$index].item_count">
+                订购数量: <input class="form-control" ng-init="orderItem[$index].item_count=0" value=0 ng-model="orderItem[$index].item_count">
             </div>
             备注
             <input class="form-control" ng-model="order.notes">
