--- a/public/group_detail.html
+++ b/public/group_detail.html
@@ -6,13 +6,14 @@
 <toggle-switch class="switch-success" ng-model="switchStatus" ng-click="toggle()"></toggle-switch>
 <br>
 <h1>Orders</h1>
+
 <div class="col-sm-3 col-md-3 input-group">
     <input type="text" class="form-control" placeholder="Search phone..." ng-model="searchPhone">
     <div class="input-group-btn">
     	<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
     </div>
 </div>
-<table class="table table-striped table-responsive">
+<table class="table table-striped table-responsive" ng-init="tableInit()">
 <thead>
     <tr>
     <th>订单时间</th>
@@ -31,7 +32,7 @@
         <td>{{order.name}}</td>
         <td>{{order.email}}</td>
         <td>{{order.phone_number}}</td>
-        <td ng-repeat-start="oi in order.items">{{oi.item_count}}</td>
+        <td ng-repeat-start="oi in order.items" ng-init="totalOrderItemCount[oi.item_name] = +totalOrderItemCount[oi.item_name] + +oi.item_count" >{{oi.item_count}}</td>
         <td ng-repeat-end>{{oi.item_price}}</td>
         <td>{{order.notes}}</td>
         <td>
@@ -39,6 +40,16 @@
             <button class="btn btn-info" ng-click="pickupOrder(order._id)" ng-disabled="order.pickedup">Pickup</button>
             <button class="btn btn-danger" ng-click="removeOrder(order._id)">Remove</button>
         </td>
+    </tr>
+    <tr class="warning">
+        <td>Total</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td ng-repeat-start="soi in totalOrderItemCount">{{soi}}</td>
+        <td ng-repeat-end></td>
+        <td></td>
+        <td></td>
     </tr>
 </tbody>
 </table>
