--- a/public/group_detail.html
+++ b/public/group_detail.html
@@ -41,7 +41,7 @@
             <button class="btn btn-danger" ng-click="removeOrder(order._id)">Remove</button>
         </td>
     </tr>
-    <tr class="warning">
+    <tr class="warning totalRow">
         <td>Total</td>
         <td></td>
         <td></td>
