--- a/public/shop.html
+++ b/public/shop.html
@@ -6,6 +6,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bower_components/angular-bootstrap-toggle-switch/style/bootstrap3/angular-toggle-switch-bootstrap-3.css">
+    <link rel="stylesheet" href="css/group_detail.css">
 	<title>团购后台</title>
 </head>
 <body>
