--- a/public/group_detail.html
+++ b/public/group_detail.html
@@ -85,8 +85,11 @@
             </div>
             备注
             <input class="form-control" ng-model="order.notes">
-        <div class="modal-footer">
-            <button class="btn btn-primary" type="button" ng-click="ok()">SAVE</button>
+        <div class="modal-footer"> 
+            <div ng-if="editMode == true && order.pickedup == true" style="float:left">
+                <button class="btn btn-danger" type="button" ng-click="unpickup()">UnPickup</button>
+            </div>
+            <button class="btn btn-primary" type="button" ng-click="ok()">Save</button>
             <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
         </div>
     </script>
