--- a/public/group_detail.html
+++ b/public/group_detail.html
@@ -1,18 +1,17 @@
 <h1>{{groupbuy.title}}后台</h1>
 <br>
 
-<button class="btn btn-info" ng-click="refresh()">Refresh</button>
-<button class="btn btn-danger" ng-click="addOrder()">Add Order</button>
+<button class="btn btn-info" ng-click="refresh()">刷新</button>
+<button class="btn btn-danger" ng-click="addOrder()">添加订单</button>
 <toggle-switch class="switch-success" ng-model="switchStatus" ng-click="toggle()"></toggle-switch>
-<br>
-<h1>Orders</h1>
-
+<br><br>
 <div class="col-sm-3 col-md-3 input-group">
-    <input type="text" class="form-control" placeholder="Search phone..." ng-model="searchPhone">
+    <input type="text" class="form-control" placeholder="请输入电话后四位..." ng-model="searchPhone">
     <div class="input-group-btn">
     	<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
     </div>
 </div>
+<br>
 <table class="table table-striped table-responsive" ng-init="tableInit()">
 <thead>
     <tr>
@@ -22,7 +21,7 @@
     <th>电话</th>
     <th ng-repeat-start="item in groupbuy.items" ng-repeat-end>{{item.item_name}}</th>
     <th>备注</th>
-    <th>Action</th>
+    <th>操作</th>
     </tr>
 </thead>
 <tbody>
@@ -35,13 +34,13 @@
             {{oi.item_count}}</td>
         <td>{{order.notes}}</td>
         <td>
-            <button class="btn btn-info" ng-click="editOrder(order)">Edit</button>
-            <button class="btn btn-info" ng-click="pickupOrder(order._id)" ng-disabled="order.pickedup">Pickup</button>
-            <button class="btn btn-danger" ng-click="removeOrder(order._id)">Remove</button>
+            <button class="btn btn-info" ng-click="editOrder(order)">编辑</button>
+            <button class="btn btn-info" ng-click="pickupOrder(order._id)" ng-disabled="order.pickedup">提货</button>
+            <button class="btn btn-danger" ng-click="removeOrder(order._id)">删除</button>
         </td>
     </tr>
     <tr class="warning totalRow">
-        <td>Total</td>
+        <td>总计</td>
         <td></td>
         <td></td>
         <td></td>
@@ -58,10 +57,10 @@
     <script type="text/ng-template" id="newOrder.html">
         <div class="modal-header">
             <div ng-if="editMode == true">
-                <h3 class="modal-title">Edit Order</h3>
+                <h3 class="modal-title">编辑订单</h3>
             </div>
             <div ng-if="editMode != true">
-                <h3 class="modal-title">New Order</h3>
+                <h3 class="modal-title">新订单</h3>
             </div>
         </div>
         <div class="modal-body">
@@ -87,10 +86,10 @@
             <input class="form-control" ng-model="order.notes">
         <div class="modal-footer"> 
             <div ng-if="editMode == true && order.pickedup == true" style="float:left">
-                <button class="btn btn-danger" type="button" ng-click="unpickup()">UnPickup</button>
+                <button class="btn btn-danger" type="button" ng-click="unpickup()">恢复提货</button>
             </div>
-            <button class="btn btn-primary" type="button" ng-click="ok()">Save</button>
-            <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+            <button class="btn btn-primary" type="button" ng-click="ok()">保存</button>
+            <button class="btn btn-warning" type="button" ng-click="cancel()">取消</button>
         </div>
     </script>
 </div>
