--- a/public/admin.html
+++ b/public/admin.html
@@ -74,6 +74,8 @@
                     <input class="form-control" ng-model="groupbuy.description">
                     Photo link
                     <input class="form-control" ng-model="groupbuy.photoLink">
+                    Batch Id
+                    <input class="form-control" ng-model="groupbuy.batchId">
                     <div data-ng-repeat="item in items">
                         item name
                         <input class="form-control" ng-model="items[$index].item_name">
