fixed item count and name once groupbuy start

--- a/public/order_view.html
+++ b/public/order_view.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <div ng-if="groupbuyON == true">
-    <h1>{{groupbuy.title}}</h1>
+    <h1>{{groupbuy.batchId}}{{groupbuy.title}}</h1>
 </div> 
 <div ng-if="groupbuyON == false">
-    <h1>{{groupbuy.title}} 已截止</h1>
+    <h1>{{groupbuy.batchId}}{{groupbuy.title}} 已截止</h1>
 </div> 
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-lg-8">
