--- a/public/order_view.html
+++ b/public/order_view.html
@@ -22,11 +22,11 @@
         <br>
         <br>
         <div ng-show="groupbuyON">
-            微信名字<br>
+            微信名字<span class="star">&#x2605</span><br>
             <input class="form-contrl" type="text" ng-model="order.name"><br><br>
             E-mail<br>
             <input class="form-contrl" type="text" ng-model="order.email"> <br><br>
-            电话<br>
+            电话<span class="star">&#x2605</span><br>
             <input class="form-contrl" type="text" ng-model="order.phone_number"><br><br>
             
             <div data-ng-repeat="item in groupbuy.items">
