--- a/public/order.html
+++ b/public/order.html
@@ -17,6 +17,7 @@
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-number-picker/angular-number-picker.js"></script>
     <script src="controllers/order_controller.js"></script>
 </body>
 
