--- a/public/order_view.html
+++ b/public/order_view.html
@@ -24,9 +24,9 @@
         <div ng-show="groupbuyON">
             微信名字<span class="star">&#x2605</span><br>
             <input class="form-contrl" type="text" ng-model="order.name"><br><br>
-            E-mail<br>
+            E-mail (选填)<br>
             <input class="form-contrl" type="text" ng-model="order.email"> <br><br>
-            电话<span class="star">&#x2605</span><br>
+            电话 (选填)<br>
             <input class="form-contrl" type="text" ng-model="order.phone_number"><br><br>
             
             <div data-ng-repeat="item in groupbuy.items">
