--- a/public/order_view.html
+++ b/public/order_view.html
@@ -26,7 +26,7 @@
             <input class="form-contrl" type="text" ng-model="order.name"><br><br>
             E-mail (选填)<br>
             <input class="form-contrl" type="text" ng-model="order.email"> <br><br>
-            电话 (选填)<br>
+            电话<span class="star">&#x2605</span><br>
             <input class="form-contrl" type="text" ng-model="order.phone_number"><br><br>
             
             <div data-ng-repeat="item in groupbuy.items">
