add delete order confirmation window

--- a/public/group_detail.html
+++ b/public/group_detail.html
@@ -40,7 +40,7 @@
         <td>
             <button class="btn btn-info" ng-click="editOrder(order)">编辑</button>
             <button class="btn btn-info" ng-click="pickupOrder(order._id)" ng-disabled="order.pickedup">提货</button>
-            <button class="btn btn-danger" ng-click="removeOrder(order._id)">删除</button>
+            <button class="btn btn-danger" ng-click="removeOrder(order)">删除</button>
         </td>
     </tr>
     <tr class="warning totalRow">
