--- a/public/group_detail.html
+++ b/public/group_detail.html
@@ -5,16 +5,18 @@
 <button class="btn btn-danger" ng-click="addOrder()">添加订单</button>
 <toggle-switch class="switch-success" ng-model="switchStatus" ng-click="toggle()"></toggle-switch>
 
-<span class="text">批次</span><select ng-model="selectedBatchId" ng-change="refresh()" >
+<span class="text">批次</span>
+<select ng-model="selectedBatchId" ng-change="refresh()" >
     <option ng-repeat="bid in groupbuyBatchIdArray" value="{{bid}}">{{bid}}</option>
 </select>
 <br><br>
 <div class="col-sm-3 col-md-3 input-group">
     <input type="text" class="form-control" placeholder="请输入电话后四位..." ng-model="searchPhone">
     <div class="input-group-btn">
-    	<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
     </div>
 </div>
+
 <br>
 <table class="table table-striped table-responsive" ng-init="tableInit()">
 <thead>
@@ -54,6 +56,12 @@
     </tr>
 </tbody>
 </table>
+
+<button class="btn btn-info" ng-click="refresh()">刷新</button>
+<button class="btn btn-danger" ng-click="addOrder()">添加订单</button>
+<br><br>
+
+<textarea name="Text1" rows="5" cols="40" ng-click="selectTextArea($event)">{{wechat_msg}}</textarea>
 
 
 <!-- Modal -->
