--- a/public/group_detail.html
+++ b/public/group_detail.html
@@ -1,4 +1,4 @@
-<h1>{{groupbuy.title}}后台</h1>
+<h1><a ng-href="{{create_groupbuyURL()}}">{{groupbuy.title}}</a></h1>
 <br>
 <button class="btn btn-info" ng-click="editGroupbuy()">编辑团购</button>
 <button class="btn btn-info" ng-click="refresh()">刷新</button>
