change file names

--- a/public/shop.html
+++ b/public/shop.html
@@ -25,6 +25,7 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-bootstrap-toggle-switch/angular-toggle-switch.js"></script>
     <script src="controllers/shop_ctrl.js"></script>
+    <script src="controllers/groupbuy_ctrl.js"></script>
 </body>
 
 </html>
