--- a/public/addmiin.html
+++ b/public/addmiin.html
@@ -132,7 +132,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-    <script src="controllers/controller.js"></script>
+    <script src="controllers/admin_ctrl.js"></script>
 </body>
 
 </html>
