change to textarea

--- a/public/addmiin.html
+++ b/public/addmiin.html
@@ -72,7 +72,7 @@
                     Title
                     <input class="form-control" ng-model="groupbuy.title"> 
                     Description
-                    <input class="form-control" ng-model="groupbuy.description">
+                    <textarea class="form-control" rows="3" ng-model="groupbuy.description"></textarea>
                     Photo link
                     <input class="form-control" ng-model="groupbuy.photoLink">
                     Batch Id
