--- a/public/group_detail.html
+++ b/public/group_detail.html
@@ -113,9 +113,9 @@
                     <h3 class="modal-title">编辑团购</h3>
                 </div>
                 <div class="modal-body">
-                    标题
+                    团购标题
                     <input class="form-control" ng-model="groupbuy.title"> 
-                    介绍文字
+                    团购描述
                     <textarea class="form-control" rows="3" ng-model="groupbuy.description"></textarea>
                     照片链接
                     <input class="form-control" ng-model="groupbuy.photoLink">
