--- a/public/shop_detail.html
+++ b/public/shop_detail.html
@@ -37,7 +37,7 @@
             团购标题
             <input class="form-control" ng-model="groupbuy.title"> 
             团购描述
-            <input class="form-control" ng-model="groupbuy.description">
+            <textarea class="form-control" rows="3" ng-model="groupbuy.description"></textarea>
             照片链接
             <input class="form-control" ng-model="groupbuy.photoLink"> 
             批次
