--- a/public/order_view.html
+++ b/public/order_view.html
@@ -18,41 +18,42 @@
             </div>
         </div>
         <div class="panel-body">
+        <form name="orderForm">
             <img src="{{groupbuy.photoLink}}" class="img-responsive img-thumbnail"></img>
             <br> {{groupbuy.description}}
             <br>
             <br>
             <div ng-show="groupbuyON">
                 <div class="row">
-                    <label>微信名字<span class="star">&#x2605</span></label><br>
+                    <label>微信名字<span class="star">&#x2605</span></label>
                     <input class="form-contrl" type="text" ng-model="order.name">
                 </div>
                 <br>
                 <div class="row">
-                    <label>电话<span class="star">&#x2605</span></label><br>
+                    <label>电话<span class="star">&#x2605</span></label>
                     <input class="form-contrl" type="tel" ng-model="order.phone_number">
                 </div>
                 <br>
                 <div data-ng-repeat="item in groupbuy.items">
                     <div class="row">
-                        <lable>{{item.item_name}} 价格: {{item.item_price}}</lable><br>
-                        <input class="form-contrl" type="tel" ng-init="orderItem[$index].item_count=0" value=0 ng-model="orderItem[$index].item_count" placeholder="订购数量">
+                        <lable>{{item.item_name}} 价格: {{item.item_price}}</lable>
+                        <input class="form-contrl" type="tel" ng-init="orderItem[$index].item_count=0" value=0 ng-model="orderItem[$index].item_count">
                     </div>
                     <br>
                 </div>
-                
+                <br>
                 <div class="row">
-                    <label>备注</label><br>
+                    <label>备注</label>
                     <input class="form-contrl" type="text" ng-model="order.notes">
                 </div>
                 <br>
                 <div class="row">
-                    <div role="alert">
-                        <span class="label label-danger" ng-show="hasError">{{submit_check_message}}</span>
-                    </div>
+                    <label class="warning" ng-show="hasError">{{submit_check_message}}</label>
                 </div>
+                <br>
                 <button class="btn btn-primary btn-lg" type="button" ng-click="submit_order()">提交订单</button>
             </div>
+        </form>
         </div>
     </div>
 </body>
