--- a/public/addmiin.html
+++ b/public/addmiin.html
@@ -2,6 +2,7 @@
 <html ng-app="myApp">
 
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 
